--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
     "mongoose": "^8.15.0",
