--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
+    "@tailwindcss/postcss": "^4.1.7",
+
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
     "mongoose": "^8.15.0",
@@ -17,6 +19,8 @@
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.7",
+
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
